<resources>
    <string name="app_name">Score Keeper</string>
    <string name="action_settings">Settings</string>
    <string name="offside">+Offside</string>
    <string name="goal">+Goal</string>
    <string name="_0">0</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="corner">+Corner</string>
    <string name="reset">reset</string>
</resources>
